# disband

./: .eslintrc.cjs  .gitignore  .gitmodules  README.md  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dist-electron/: main.js
electron/: audio-sidecar.ts  electron-env.d.ts  main.ts  menu.ts  preload.ts  settings-store.ts  utils.ts  window.ts
native/audio-capture/: CMakeLists.txt
native/audio-capture/src/: main.cpp  session.cpp  session.h
native/audio-engine/: CMakeLists.txt
native/audio-engine/src/analysis/: audio_loader.cpp  criterion_judgment.cpp  judger.cpp  note_judger.cpp  session.h  session_matching.cpp
native/audio-engine/src/analysis/judgment_errors/: articulation.cpp  errors.h  pitch.cpp  session_scan.cpp  session_scan.h  timing.cpp  velocity.cpp
native/audio-engine/src/analysis/note_extraction/: aubio_context.cpp  aubio_extractor.cpp  internal.h  pitch_utils.cpp  preprocess.cpp  segmentation.cpp
native/audio-engine/src/analysis/note_extractor/: aubio_context.cpp  extractor.cpp  internal.h  pitch_utils.cpp  preprocess.cpp  segmentation.cpp
native/audio-engine/src/app/: analyze_main.cpp  capture_main.cpp  log.cpp  log.h  main.cpp
native/audio-engine/src/json/: json.cpp  json.h
shared/: constants.ts  settings.ts  types.ts
src/: App.tsx  index.css  main.tsx
src/components/: PanelLabel.tsx
src/components/layout/: Shell.tsx
src/components/ui/: Panel.tsx  PanelHeader.tsx  accordion.tsx  button.tsx  card.tsx  color-theme-provider.tsx  dialog.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/features/configuration/: FormComponents.tsx  OptionsPanel.tsx  SettingsWindow.tsx  settingsEntries.ts
src/features/engine/: PlaybackControlPanel.tsx  PlaybackControls.tsx  PlaybackControlsPanel.tsx  PlaybackHotkeys.tsx  TabView.tsx  TabViewPanel.tsx  alphaTabDefaultSettings.json  alphaTabSettings.json  alphaTabSettings.ts  playback.ts  useAlphaTab.ts
src/features/mixing/: TrackMenu.tsx
src/features/session/: AudioAnalysisPanel.tsx  BarMarker.tsx  NoteMarker.tsx  QuarterBarMarker.tsx  RealtimeWaveform.tsx  Recorder.tsx  SessionCanvas.tsx  SessionMarkers.tsx  SessionPanel.tsx  SessionWaveform.tsx  SixteenthBarMarker.tsx  useAudioAnalysisMarkers.ts  useRealtimeAudio.ts  useRecordingTake.ts  useSessionAnalysisView.ts  useSessionWaveSurfer.ts  useTestAudioFixtures.ts
src/features/timeline/: NoteMarker.tsx  TimelinePanel.tsx
src/features/timeline/session/: SessionAttackReviewCharts.tsx  SessionMarkers.tsx  SessionPanel.tsx  SessionReviewWindow.tsx  SessionWaveform.tsx  useRecordingTake.ts  useSessionAnalysisView.ts  useSessionWaveSurfer.ts
src/features/tracks/: TrackMenuPanel.tsx  VolumeDbSlider.tsx
src/lib/: noteJudgmentClasses.ts  sessionCriteria.ts  utils.ts
src/state/: useStore.ts
src/store/: useConfigStore.ts  useEngineStore.ts  useLibraryStore.ts  useSessionStore.ts
